--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@babylonjs/inspector": "^5.3.0",
         "@babylonjs/loaders": "^5.3.0",
         "@babylonjs/materials": "^5.3.0",
+        "@vladmandic/human": "^2.10.2",
         "ammo.js": "github:kripken/ammo.js",
         "microsoft-cognitiveservices-speech-sdk": "^1.23.0"
     },
